--- a/src/app/main-content/contact-me/contact-me.component.scss
+++ b/src/app/main-content/contact-me/contact-me.component.scss
@@ -34,7 +34,7 @@ button {
     padding: 13px 24px;
     gap: 10px;
     font-family: 'karla', 'sans-serif';
-    font-size: clamp(10px, 4vw, 18px);
+    font-size: clamp(16px, 4vw, 18px);
     font-weight: 400;
     opacity: 0.5;
     &:hover{
