--- a/src/app/main-content/overlayer/overlayer.component.scss
+++ b/src/app/main-content/overlayer/overlayer.component.scss
@@ -6,7 +6,7 @@
     width: 100%;
     height: 100vh;
     position: fixed;
-    z-index: 100;
+    z-index: 9999;
     background-color: transparent;
     display: none;
     justify-content: center;
