--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -11,7 +11,7 @@ section {
     align-items: center;
     position: sticky;
     top: 0;
-    z-index: 9999;
+    z-index: 999;
 }
 
 .content{
@@ -120,7 +120,7 @@ nav {
     display: none;
     flex-direction: column;
     align-items: flex-end;
-    z-index: 9999;
+    z-index: 999;
 }
 
 .burger-menu{
