--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,7 +21,7 @@ border-radius: 100px;
 padding: 13px 24px;
 gap: 10px;
 font-family: 'karla', 'sans-serif';
-font-size: clamp(10px, 4vw, 18px);
+font-size: clamp(16px, 4vw, 18px);
 font-weight: 400;
     &:hover{
         cursor: pointer;
